syntax = "proto3";
option go_package="./proto";

service EndToEndService {
  rpc sendMessage(RequestMessage) returns (ResponseMessage) {}
}

//requestemessage
message RequestMessage {
  string id = 1;     //id of the request's user
  map<string,string> MessageHeader = 2;  // messageheader
  bytes Payload =3;   //payload
}

//response message
message ResponseMessage {

}
